--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -298,7 +298,7 @@ Hero
   width: 100%;
 }
 header {
-  padding: 50px 0;
+  padding: 10px 0;
   border-bottom: solid 1px rgba(255, 255, 255, 0.2);
   position: relative;
   width: 1170px;
@@ -318,7 +318,7 @@ header {
     display: inline-block;
   }
   .logo img {
-    height: 19px;
+    height: 60px;
   }
   ul.primary-nav {
     margin: 0 0 0 75px;
@@ -359,7 +359,7 @@ header {
   .member-actions {
     position: absolute;
     right: 0;
-    top: 41px;
+    top: 20px;
     transition: all 300ms ease-in-out;
   }
 }
@@ -563,9 +563,23 @@ Features-stack
   .time {
     font-size: 13px;
     font-style: italic;
-    text-transform: lowercase;
+    // text-transform: lowercase;
     color: $txt-primary;
   }
+}
+
+/* ==========================================================================
+.hotels
+========================================================================== */
+.hotels {
+  .leftcol {
+    padding-right: 100px;
+    border-right: solid 1px $keyline-color;
+  }
+  .rightcol {
+    padding-left: 100px;
+  }
+
 }
 
 /* ==========================================================================
