--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -278,11 +278,11 @@ Hero
     margin-bottom: 80px;
   }
   .hero-content {
-    padding-top: 40%;
+    padding-top: 35%;
   }
   .hero-content img {
-    width: 55%;
-    margin-bottom: 12%;
+    width: 35%;
+    margin-bottom: 10%;
   }
 }
 .navigation {
@@ -774,7 +774,7 @@ Google map
 }
 #map-content, #map-content2 {
   margin-top: 40px;
-  padding: 50px 60px 20px;
+  padding: 50px 60px;
   background: #fff;
   -webkit-transition: opacity 0.5s, visibility 0.6s, margin-top 0.5s;
   transition: opacity 0.5s, visibility 0.6s, margin-top 0.5s;
